--- a/presentation/src/main/res/layout/activity_on_board.xml
+++ b/presentation/src/main/res/layout/activity_on_board.xml
@@ -1,18 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".features.onboard.OnBoardFragment">
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
     <data>
         <variable
             name="vm"
             type="com.example.carretmarket.features.onboard.OnBoardViewModel" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
+        tools:context="com.example.carretmarket.features.onboard.OnBoardActivity"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <FrameLayout
-            android:id="@+id/fl_on_board"
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/nav_host_on_board"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+
+            android:name="androidx.navigation.fragment.NavHostFragment"
+            app:defaultNavHost="true"
+            app:navGraph="@navigation/nav_graph"
+            />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
