--- a/presentation/src/main/res/layout/activity_on_main.xml
+++ b/presentation/src/main/res/layout/activity_on_main.xml
@@ -12,13 +12,16 @@
         android:layout_height="match_parent">
 
         <androidx.fragment.app.FragmentContainerView
-            android:name="com.example.carretmarket.features.home.HomeFragment"
-            android:id="@+id/fl_main"
+            android:id="@+id/nav_host_on_main"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintBottom_toTopOf="@id/bottom_nav"
             app:layout_constraintTop_toTopOf="parent"
             />
+<!--        app:defaultNavHost="true"-->
+        <!--        android:name="androidx.navigation.fragment.NavHostFragment"-->
+        <!--            app:navGraph="@navigation/nav_graph"-->
+<!--            />-->
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottom_nav"
             app:menu="@menu/menu_bottom_nav"
@@ -28,7 +31,7 @@
             app:itemIconTint="@color/base3"
             app:itemTextColor="@color/base3"
             app:itemIconSize="30dp"
-            app:layout_constraintTop_toBottomOf="@id/fl_main"
+            app:layout_constraintTop_toBottomOf="@id/nav_host_on_main"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
