--- a/presentation/src/main/res/layout/fragment_sign_up.xml
+++ b/presentation/src/main/res/layout/fragment_sign_up.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".features.onboard.signup.SignUpFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
             name="vm"
@@ -12,7 +11,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white">
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -27,7 +25,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="30dp"
                 android:fontFamily="@font/suite_boldextra"
-                android:text="참 좋은 회원가입"
+                android:text="회원가입해라"
                 android:textSize="30sp"
                 app:layout_constraintBottom_toTopOf="@id/et_inp_id"
                 app:layout_constraintEnd_toEndOf="parent"
